--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-1/int06-2-1/int06-2-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-1/int06-2-1/int06-2-1.component.html
@@ -1,3 +1,82 @@
-<p>
-  int06-2-1 works!
-</p>
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
+
+<div class="ui grid">
+  <div class="sixteen wide column">
+    <div class="ui top attached header">
+      <span>ค้นหาข้อมูลค่าใช้จ่าย</span>
+    </div>
+    <!-- form search -->
+    <div class="ui attached segment">
+      <form class="ui form">
+        <!-- row 1 -->
+        <input type="hidden" [(ngModel)]="model.searchFlag" name="searchFlag">
+        <div class="inline fields ui centered grid ">
+          <div class="one wide field "></div>
+          <div class="three wide field ">
+            <label class="text-right full-width">รหัสบัญชี</label>
+          </div>
+          <div class="four wide field">
+            <input type="text" [(ngModel)]="model.accountId" name="accountId" />
+          </div>
+          <div class="two wide field  ">
+            <label class="text-right full-width">ชื่อบัญชี</label>
+          </div>
+          <div class="four wide field">
+            <input type="text" [(ngModel)]="model.accountName" name="accountName" />
+          </div>
+          <div class="two wide field "></div>
+        </div>
+        <br><br>
+        <div class="ui stackable center aligned page grid">
+          <button class="ui mini primary button" type="button" (click)="search()"> บันทึก</button>
+          <button class="ui mini gray button" type="button" (click)="clear()">ล้างข้อมูล</button>
+          <button class="ui mini primary button" type="button" routerLink="/int06/1/2-2"> เพิ่มข้อมูล</button>
+        </div><br>
+      </form>
+    </div>
+  </div>
+</div>
+
+<!-- table -->
+<div class="ui segment">
+  <table id="dataTable" class="ui small celled table nowrap" style="width: 100%">
+    <thead>
+      <tr style="text-align: center;">
+        <th rowspan="2">ลำดับ</th>
+        <th rowspan="2">รหัสบัญชี</th>
+        <th rowspan="2">ชื่อบัญชี</th>
+        <th colspan="3">กิจกรรม (รับโอนจากกรมฯ)</th>
+        <th rowspan="2">รวมรับ</th>
+        <th colspan="3">การเบิกจ่ายจริงแยกตามกิจกรรมตามทะเบียนคุม</th>
+        <th rowspan="2">รวมรับ</th>
+        <th colspan="3">คงเหลือ</th>
+        <th rowspan="2">คงเหลือรวม</th>
+        <th colspan="4">ถัวจ่าย</th>
+        <th colspan="2">เหลือสุทธิ</th>
+        <th rowspan="2">หมายเหตุ</th>
+        <th rowspan="2"></th>
+      </tr>
+      <tr>
+        <th>การบริหาร</th>
+        <th>ปราบปราม</th>
+        <th>เงินนอกงปม.</th>
+
+        <th>การบริหาร</th>
+        <th>ปราบปราม</th>
+        <th>เงินนอกงปม.</th>
+
+        <th>การบริหาร</th>
+        <th>ปราบปราม</th>
+        <th>เงินนอกงปม.</th>
+
+        <th>ถัวเป็นเงิน</th>
+        <th>ถัวเป็นให้</th>
+        <th>ถัวมาเงิน</th>
+        <th>ถัวมาจาก</th>
+
+        <th>เงินงบ</th>
+        <th>เงินนอก</th>
+      </tr>
+    </thead>
+  </table><br>
+</div>
