--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -101,10 +101,15 @@
                                 routerLinkActive="active ">ตรวจสอบสินทรัพย์แบบเพิ่มข้อมูล</a>
                             <a class="item " [routerLink]="[ '/int05/3/2'] " *ngIf="authService.renderByPage('int05/3/2')"
                                 routerLinkActive="active ">ตรวจสอบข้อมูลสินทรัพย์</a>
+                            <a class="item " [routerLink]="[ '/int05/3/3'] " *ngIf="authService.renderByPage('int05/3/3')"
+                                routerLinkActive="active ">บันทึกข้อมูลสินทรัพย์</a>
+
                         </div>
                     </div>
                     <a class="item " [routerLink]="[ authService.renderByPage('admin') ? '/int05/4/admin' : '/int05/4']"
                         *ngIf="authService.renderByPage('int05/4')" routerLinkActive="active ">บันทึกผลการจัดซื้อจัดจ้าง</a>
+                    <a class="item " [routerLink]="[ '/int05/5']" *ngIf="authService.renderByPage('int05/5')"
+                        routerLinkActive="active ">บันทึกผลการจัดซื้อจัดจ้าง</a>
                 </div>
             </div>
             <div class="ui simple dropdown item " *ngIf="authService.renderByPage('int07')">
